--- a/forms/contactus.html
+++ b/forms/contactus.html
@@ -52,7 +52,7 @@
                         <a class="nav-link grow" href="#">Contact Us</a>
                     </li>
                 </ul>
-                <a href="./login.html"><i class="fas fa-user signin grow"> SignIn</i></a>
+                <a href="./register.html"><i class="fas fa-user signin grow"> SignIn</i></a>
             </div>
         </nav>
         <div class="heading text-center" style="margin-top: 2rem;">
