--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item grow">
-            <a class="nav-link" href="forms/login.html">Login</a>
+            <a class="nav-link" href="forms/register.html">Login</a>
           </li>
           <li class="nav-item grow">
-            <a class="nav-link" href="forms/login.html">Register</a>
+            <a class="nav-link" href="forms/register.html">Register</a>
           </li>
           <li class="nav-item grow">
             <a class="nav-link" href="about_us.html">About Us</a>
@@ -76,7 +76,7 @@
           </li>
         </ul>
 
-        <a href="./forms/login.html"><i class="fas fa-user signin grow"> Login</i></a>
+        <a href="./forms/register.html"><i class="fas fa-user signin grow"> Login</i></a>
       </div>
     </nav>
     <!-- <h1>Hello, world!</h1> -->
@@ -103,7 +103,7 @@
             Or if you've lost something just chill! People here are damnnn cool!
           </p>
           <div class="shrink">
-            <a class="learn-more" href="forms/login.html">Register Now</a>
+            <a class="learn-more" href="forms/register.html">Register Now</a>
           </div>
         </div>
 
@@ -135,7 +135,7 @@
               We try to reduce students stress somewhat by heping them if they
               lost something precious on the college/hostle grounds. <br />
               There are two sections in the app — <b>LOST</b> and <b>FOUND</b>.
-              Please <a href="forms/login.html">login</a> or <a href="forms/login.html">register</a> to access them. You can
+              Please <a href="forms/register.html">login</a> or <a href="forms/register.html">register</a> to access them. You can
               inform other people about what precious belonging you’ve lost and
               ask your fellow students for help and if you’ve found something
               then you can be of help to somebody else. Both the sections have
@@ -193,7 +193,7 @@
               </ul>
 
               <div class="shrink">
-                <a class="learn-more px-5" href="forms/login.html">Login to proceed</a>
+                <a class="learn-more px-5" href="forms/register.html">Login to proceed</a>
               </div>
             </div>
           </div>
@@ -235,7 +235,7 @@
               </ul>
 
               <div class="shrink">
-                <a class="learn-more px-5" href="forms/login.html">Login to proceed</a>
+                <a class="learn-more px-5" href="forms/register.html">Login to proceed</a>
               </div>
             </div>
           </div>
