--- a/forms/register.html
+++ b/forms/register.html
@@ -69,13 +69,13 @@
                           <label>Email</label>
                           <input id="email" type="email" class="form-control" placeholder="your@college.edu" />
                         </div>
-                        <button id="requestBtn" class="btn btn-primary">Request OTP</button>
+                        <button id="requestBtn" type="button" class="btn btn-primary">Request OTP</button>
                         <div id="otpSection" class="mt-4" style="display:none;">
                           <div class="form-group">
                             <label>Enter OTP</label>
                             <input id="otp" type="text" class="form-control" placeholder="6-digit code" />
                           </div>
-                          <button id="verifyBtn" class="btn btn-success">Verify</button>
+                          <button id="verifyBtn" type="button" class="btn btn-success">Verify</button>
                         </div>
                     </div>
                 </div>
