making home responsive

--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
           class="
             text
             col-lg-6 col-md-6 col-12
-            w-50
             d-flex
             flex-column
             align-items-center
@@ -107,7 +106,7 @@
           </div>
         </div>
 
-        <div class="img col-lg-6 col-md-6 col-12">
+        <div class="img col-lg-6 col-md-6 col-12 pt-5 pb-5">
           <img
             src="images/lost-and-found.png"
             alt="image"
@@ -118,14 +117,14 @@
 
       <section class="discovery-col-ak section-2">
         <div class="container">
-          <div class="img col-lg-6 col-md-6 col-12 w-50 pt-5 pb-5">
+          <div class="img col-lg-6 col-md-6 col-12 pt-5 pb-5">
             <img
               src="images/community.png"
               alt="image"
               class="img-fluid border-top-20"
             />
           </div>
-          <div class="text col-lg-6 col-md-6 col-12 w-50 pt-5 pb-5">
+          <div class="text col-lg-6 col-md-6 col-12 pt-5 pb-5">
             <h2 class="title mb-3">
               WHAT WE DO
               <hr />
@@ -161,16 +160,15 @@
             </h2>
           </div>
           <div
-            class="d-flex flex-row-reverse justify-content-between container"
+            class="d-flex flex-row-reverse flex-wrap justify-content-between container"
           >
-            <div class="card-image w-50 col-lg-6 col-md-3 col-12 text-right">
+            <div class="card-image col-lg-6 col-md-3 col-12 text-right">
               <img class="img-fluid w-100" src="images/lost-card.png" alt="" />
             </div>
             <div
               class="
                 one
                 col-lg-6 col-md-3 col-12
-                w-50
                 m-2
                 align-items-center
                 lost-found-card
@@ -198,16 +196,15 @@
             </div>
           </div>
           <div
-            class="d-flex flex-row justify-content-between container mt-5 pb-5"
+            class="d-flex flex-row flex-wrap justify-content-between container mt-5 pb-5"
           >
-            <div class="card-image w-50 col-lg-6 col-md-3 col-12 text-left">
+            <div class="card-image col-lg-6 col-md-3 col-12 text-left">
               <img class="img-fluid w-100" src="images/found-card.png" alt="" />
             </div>
             <div
               class="
                 one
                 col-lg-6 col-md-3 col-12
-                w-50
                 m-2
                 align-items-center
                 lost-found-card
@@ -242,103 +239,6 @@
         </div>
       </section>
 
-      <!-- RECENT RETURNS -->
-
-      <section class="section-4">
-        <div class="heading text-center mb-4 pt-5">
-          <h2 class="heading">
-            RECENT RETURNS
-            <div class="d-flex justify-content-center">
-              <hr />
-            </div>
-          </h2>
-        </div>
-        <div class="container">
-          <div class="card-group">
-            <div class="card">
-              <img src="images/phone.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">CELLPHONE</h5>
-                <p class="card-text">
-                  Return By : <strong>Ishan Mishra</strong>
-                </p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-              </div>
-            </div>
-            <div class="card mx-2">
-              <img src="images/watch.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">WRIST WATCH</h5>
-                <p class="card-text">
-                  Return By : <strong>Rawat Senpai</strong>
-                </p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 2 days ago</small>
-              </div>
-            </div>
-            <div class="card">
-              <img
-                src="images/water-bottle.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">WATER BOTTLE</h5>
-                <p class="card-text">
-                  Return By : <strong>Srishti Shukla</strong>
-                </p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 3 days ago</small>
-              </div>
-            </div>
-          </div>
-          <div class="card-group mt-2">
-            <div class="card">
-              <img src="images/airpods.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">AIRPPODS</h5>
-                <p class="card-text">
-                  Return By : <strong>MR. PALINDROME</strong>
-                </p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 5 days ago</small>
-              </div>
-            </div>
-            <div class="card mx-2">
-              <img src="images/football.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">FOOTBALL</h5>
-                <p class="card-text">Return By : <strong>MESSI</strong></p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 7 days ago.</small>
-              </div>
-            </div>
-            <div class="card">
-              <img src="images/headphone.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">HEADPHONE</h5>
-                <p class="card-text">
-                  Return By : <strong>CHRISTENSON</strong>
-                </p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 8 days ago</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="bottom text-center mt-5 pb-5">
-          <div class="shrink">
-            <a class="learn-more px-5" href="gallery.html">View More</a>
-          </div>
-        </div>
-      </section>
       <section class="service section-5">
         <div class="row align-items-center container mx-auto py-5">
           <div class="img col-lg-6 col-md-6 col-12 w-75">
