making home responsive

--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
           <div
             class="d-flex flex-row-reverse flex-wrap justify-content-between container"
           >
-            <div class="card-image col-lg-6 col-md-3 col-12 text-right">
+            <div class="card-image col-lg-6 col-md-6 col-12 text-right">
               <img class="img-fluid w-100" src="images/lost-card.png" alt="" />
             </div>
             <div
               class="
                 one
-                col-lg-6 col-md-3 col-12
+                col-lg-6 col-md-6 col-12
                 m-2
                 align-items-center
                 lost-found-card
@@ -198,13 +198,13 @@
           <div
             class="d-flex flex-row flex-wrap justify-content-between container mt-5 pb-5"
           >
-            <div class="card-image col-lg-6 col-md-3 col-12 text-left">
+            <div class="card-image col-lg-6 col-md-6 col-12 text-left">
               <img class="img-fluid w-100" src="images/found-card.png" alt="" />
             </div>
             <div
               class="
                 one
-                col-lg-6 col-md-3 col-12
+                col-lg-6 col-md-6 col-12
                 m-2
                 align-items-center
                 lost-found-card
@@ -241,10 +241,10 @@
 
       <section class="service section-5">
         <div class="row align-items-center container mx-auto py-5">
-          <div class="img col-lg-6 col-md-6 col-12 w-75">
+          <div class="img col-lg-6 col-md-6 col-12">
             <img src="images/mission.png" alt="image" class="img-fluid" />
           </div>
-          <div class="text col-lg-6 col-md-6 col-12 w-75">
+          <div class="text col-lg-6 col-md-6 col-12">
             <h2 class="title mb-3">
               OUR MISSION
               <hr />
