making home responsive

--- a/index.html
+++ b/index.html
@@ -82,36 +82,38 @@
     <!-- <h1>Hello, world!</h1> -->
     <main>
       <section class="discovery container section-1">
-        <div
-          class="
-            text
-            col-lg-6 col-md-6 col-12
-            d-flex
-            flex-column
-            align-items-center
-            justify-content-center
-          "
-        >
-          <h1 class="pinpoint-heading mb-3">PINPOINT</h1>
+        <div class="row align-items-center">
+          <div
+            class="
+              text
+              col-lg-6 col-md-6 col-12
+              d-flex
+              flex-column
+              align-items-center
+              justify-content-center
+            "
+          >
+            <h1 class="pinpoint-heading mb-3">PINPOINT</h1>
 
-          <p>
-            Something lost it's way and came to you just to show the world how
-            honest you are!
-          </p>
-          <p class="mb-5">
-            Or if you've lost something just chill! People here are damnnn cool!
-          </p>
-          <div class="shrink">
-            <a class="learn-more" href="forms/register.html">Register Now</a>
+            <p>
+              Something lost it's way and came to you just to show the world how
+              honest you are!
+            </p>
+            <p class="mb-5">
+              Or if you've lost something just chill! People here are damnnn cool!
+            </p>
+            <div class="shrink">
+              <a class="learn-more" href="forms/register.html">Register Now</a>
+            </div>
           </div>
-        </div>
 
-        <div class="img col-lg-6 col-md-6 col-12 pt-5 pb-5">
-          <img
-            src="images/lost-and-found.png"
-            alt="image"
-            class="img-fluid lost-found"
-          />
+          <div class="img col-lg-6 col-md-6 col-12 pt-5 pb-5">
+            <img
+              src="images/lost-and-found.png"
+              alt="image"
+              class="img-fluid lost-found"
+            />
+          </div>
         </div>
       </section>
 
