making home responsive

--- a/index.html
+++ b/index.html
@@ -161,80 +161,68 @@
               </div>
             </h2>
           </div>
-          <div
-            class="d-flex flex-row-reverse flex-wrap justify-content-between container"
-          >
-            <div class="card-image col-lg-6 col-md-6 col-12 text-right">
-              <img class="img-fluid w-100" src="images/lost-card.png" alt="" />
-            </div>
-            <div
-              class="
-                one
-                col-lg-6 col-md-6 col-12
-                m-2
-                align-items-center
-                lost-found-card
-              "
-            >
-              <h5 class="card-title">Lost</h5>
-              <ul class="my-3">
-                <li class="text-left mb-3">
-                  Only the property lost on College or Hostel can be reported.
-                </li>
-                <li class="text-left mb-3">
-                  Maximum time for filing any lost report should be 2 days.
-                </li>
-                <li class="text-left mb-3">
-                  Try to be as much detailed as you can be.
-                </li>
-                <li class="text-left mb-5">
-                  Head towards the form below if you have lost your property.
-                </li>
-              </ul>
+          <div class="container"></div>
+            <div class="row align-items-center">
+              <div class="card-image col-lg-6 col-md-6 col-12 order-lg-2">
+                <img class="img-fluid w-100" src="images/lost-card.png" alt="Lost" />
+              </div>
+              <div
+                class="one col-lg-6 col-md-6 col-12 order-lg-1 m-2 align-items-center lost-found-card"
+              >
+                <h5 class="card-title">Lost</h5>
+                <ul class="my-3">
+                  <li class="text-left mb-3">
+                    Only the property lost on College or Hostel can be reported.
+                  </li>
+                  <li class="text-left mb-3">
+                    Maximum time for filing any lost report should be 2 days.
+                  </li>
+                  <li class="text-left mb-3">
+                    Try to be as much detailed as you can be.
+                  </li>
+                  <li class="text-left mb-5">
+                    Head towards the form below if you have lost your property.
+                  </li>
+                </ul>
 
-              <div class="shrink">
-                <a class="learn-more px-5" href="forms/register.html">Login to proceed</a>
+                <div class="shrink">
+                  <a class="learn-more px-5" href="forms/register.html">Login to proceed</a>
+                </div>
               </div>
             </div>
           </div>
-          <div
-            class="d-flex flex-row flex-wrap justify-content-between container mt-5 pb-5"
-          >
-            <div class="card-image col-lg-6 col-md-6 col-12 text-left">
-              <img class="img-fluid w-100" src="images/found-card.png" alt="" />
-            </div>
-            <div
-              class="
-                one
-                col-lg-6 col-md-6 col-12
-                m-2
-                align-items-center
-                lost-found-card
-              "
-            >
-              <h5 class="card-title">Found</h5>
-              <ul class="my-3">
-                <li class="text-left mb-3">
-                  Below is the form, if you've found a lost property on
-                  college/hostel.
-                </li>
-                <li class="text-left mb-3">
-                  Please try to report as soon as possible so that you can help
-                  someone in need.
-                </li>
-                <li class="text-left mb-3">
-                  The involvement of faculty will be kept as minimum as possible
-                  by our side, so that this might also help in student's ability
-                  to build connections.
-                </li>
-                <li class="text-left mb-5">
-                  If nobody comes forward for the property you found, only then
-                  the faculty will get involved.
-                </li>
-              </ul>
+          <div class="container mt-5 pb-5">
+            <div class="row align-items-center">
+              <div class="card-image col-lg-6 col-md-6 col-12 order-lg-1">
+                <img class="img-fluid w-100" src="images/found-card.png" alt="Found" />
+              </div>
+              <div
+                class="one col-lg-6 col-md-6 col-12 order-lg-2 m-2 align-items-center lost-found-card"
+              >
+                <h5 class="card-title">Found</h5>
+                <ul class="my-3">
+                  <li class="text-left mb-3">
+                    Below is the form, if you've found a lost property on
+                    college/hostel.
+                  </li>
+                  <li class="text-left mb-3">
+                    Please try to report as soon as possible so that you can help
+                    someone in need.
+                  </li>
+                  <li class="text-left mb-3">
+                    The involvement of faculty will be kept as minimum as possible
+                    by our side, so that this might also help in student's ability
+                    to build connections.
+                  </li>
+                  <li class="text-left mb-5">
+                    If nobody comes forward for the property you found, only then
+                    the faculty will get involved.
+                  </li>
+                </ul>
 
-              <div class="shrink">
-                <a class="learn-more px-5" href="forms/register.html">Login to proceed</a>
+                <div class="shrink">
+                  <a class="learn-more px-5" href="forms/register.html">Login to proceed</a>
+                </div>
               </div>
             </div>
           </div>
