--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
               col-lg-6 col-md-6 col-12
               d-flex
               flex-column
-              align-items-center
+              align-items-center align-items-lg-start
               justify-content-center
+              text-center text-lg-left
             "
           >
             <h1 class="pinpoint-heading mb-3">PINPOINT</h1>
@@ -102,7 +103,7 @@
             <p class="mb-5">
               Or if you've lost something just chill! People here are damnnn cool!
             </p>
-            <div class="shrink">
+            <div class="shrink align-self-center align-self-lg-start">
               <a class="learn-more" href="forms/register.html">Register Now</a>
             </div>
           </div>
@@ -119,34 +120,36 @@
 
       <section class="discovery-col-ak section-2">
         <div class="container">
-          <div class="img col-lg-6 col-md-6 col-12 pt-5 pb-5">
-            <img
-              src="images/community.png"
-              alt="image"
-              class="img-fluid border-top-20"
-            />
-          </div>
-          <div class="text col-lg-6 col-md-6 col-12 pt-5 pb-5">
-            <h2 class="title mb-3">
-              WHAT WE DO
-              <hr />
-            </h2>
+          <div class="row align-items-center">
+            <div class="img col-lg-6 col-md-6 col-12 pt-5 pb-5">
+              <img
+                src="images/community.png"
+                alt="image"
+                class="img-fluid border-top-20"
+              />
+            </div>
+            <div class="text col-lg-6 col-md-6 col-12 pt-5 pb-5">
+              <h2 class="title mb-3">
+                WHAT WE DO
+                <hr />
+              </h2>
 
-            <p class="mb-5">
-              We try to reduce students stress somewhat by heping them if they
-              lost something precious on the college/hostle grounds. <br />
-              There are two sections in the app — <b>LOST</b> and <b>FOUND</b>.
-              Please <a href="forms/register.html">login</a> or <a href="forms/register.html">register</a> to access them. You can
-              inform other people about what precious belonging you’ve lost and
-              ask your fellow students for help and if you’ve found something
-              then you can be of help to somebody else. Both the sections have
-              their respective instructions. <br />
-              And the faculty involvement in this procedure is about nill, so it
-              also helps in creating a strong bond between the kids and also to
-              maintain transparency.
-            </p>
-            <div class="shrink d-inline-block">
-              <a class="learn-more px-5" href="about_us.html">Learn More</a>
+              <p class="mb-5">
+                We try to reduce students stress somewhat by heping them if they
+                lost something precious on the college/hostle grounds. <br />
+                There are two sections in the app — <b>LOST</b> and <b>FOUND</b>.
+                Please <a href="forms/register.html">login</a> or <a href="forms/register.html">register</a> to access them. You can
+                inform other people about what precious belonging you’ve lost and
+                ask your fellow students for help and if you’ve found something
+                then you can be of help to somebody else. Both the sections have
+                their respective instructions. <br />
+                And the faculty involvement in this procedure is about nill, so it
+                also helps in creating a strong bond between the kids and also to
+                maintain transparency.
+              </p>
+              <div class="shrink d-inline-block">
+                <a class="learn-more px-5" href="about_us.html">Learn More</a>
+              </div>
             </div>
           </div>
         </div>
@@ -161,13 +164,13 @@
               </div>
             </h2>
           </div>
-          <div class="container"></div>
+          <div class="container">
             <div class="row align-items-center">
-              <div class="card-image col-lg-6 col-md-6 col-12 order-lg-2">
+              <div class="card-image col-lg-6 col-md-6 col-12 order-lg-1">
                 <img class="img-fluid w-100" src="images/lost-card.png" alt="Lost" />
               </div>
               <div
-                class="one col-lg-6 col-md-6 col-12 order-lg-1 m-2 align-items-center lost-found-card"
+                class="one col-lg-6 col-md-6 col-12 order-lg-2 align-items-center lost-found-card"
               >
                 <h5 class="card-title">Lost</h5>
                 <ul class="my-3">
@@ -193,11 +196,11 @@
           </div>
           <div class="container mt-5 pb-5">
             <div class="row align-items-center">
-              <div class="card-image col-lg-6 col-md-6 col-12 order-lg-1">
+              <div class="card-image col-lg-6 col-md-6 col-12 order-lg-2">
                 <img class="img-fluid w-100" src="images/found-card.png" alt="Found" />
               </div>
               <div
-                class="one col-lg-6 col-md-6 col-12 order-lg-2 m-2 align-items-center lost-found-card"
+                class="one col-lg-6 col-md-6 col-12 order-lg-1 align-items-center lost-found-card"
               >
                 <h5 class="card-title">Found</h5>
                 <ul class="my-3">
