fixed responsiveness and background of login form

--- a/index.html
+++ b/index.html
@@ -62,9 +62,6 @@
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item grow">
-            <a class="nav-link" href="forms/register.html">Login</a>
-          </li>
-          <li class="nav-item grow">
             <a class="nav-link" href="forms/register.html">Register</a>
           </li>
           <li class="nav-item grow">
@@ -75,8 +72,7 @@
             <a class="nav-link" href="forms/contactus.html">Contact Us</a>
           </li>
         </ul>
-
-        <a href="./forms/register.html"><i class="fas fa-user signin grow"> Login</i></a>
+        <a href="./forms/register.html" class="ml-lg-3"><i class="fas fa-user signin grow"> Login</i></a>
       </div>
     </nav>
     <!-- <h1>Hello, world!</h1> -->
