--- a/forms/register.html
+++ b/forms/register.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="foundForm.css">
+    <link rel="stylesheet" href="auth.css">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +25,7 @@
     <title>Sign in / Register - PinPoint</title>
 </head>
 
-<body>
+<body class="auth-page">
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
         <a class="navbar-brand grow" href="../index.html">PinPoint</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -38,50 +39,55 @@
                     <a class="nav-link grow" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link grow" href="lostForm.html">Lost</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link grow" href="foundForm.html">Found</a>
+                    <a class="nav-link grow" href="register.html">Register</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link grow" href="../about_us.html">About Us</a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link grow" href="contactus.html">Contact Us</a>
                 </li>
             </ul>
-            <a href="#"><i class="fas fa-user signin grow"> SignIn</i></a>
         </div>
     </nav>
 
     <main>
-        <section>
-            <div class="container" id="main-container">
-                <div class="image">
-                    <img src="../images/register.jpg" alt="">
-                </div>
+        <section class="auth-wrapper">
+            <div class="auth-hero">
+                <span class="auth-badge"><i class="fas fa-lock"></i> Secure OTP Login</span>
+                <h1 class="auth-title">Sign in or Create your PinPoint account</h1>
+                <p class="auth-sub">
+                    One-time password sent to your college email. No passwords to remember — fast and secure access to Lost & Found.
+                </p>
+            </div>
 
-                <div class="container p-5 mt-5" id="form-container">
-                    <h2 class="text-center mb-4">Sign in / Register</h2>
-                    <div class="card p-4">
-                        <div class="form-group">
-                          <label>Email</label>
-                          <input id="email" type="email" class="form-control" placeholder="your@college.edu" />
-                        </div>
-                        <button id="requestBtn" type="button" class="btn btn-primary">Request OTP</button>
-                        <div id="otpSection" class="mt-4" style="display:none;">
-                          <div class="form-group">
-                            <label>Enter OTP</label>
-                            <input id="otp" type="text" class="form-control" placeholder="6-digit code" />
-                          </div>
-                          <button id="verifyBtn" type="button" class="btn btn-success">Verify</button>
-                        </div>
-                    </div>
+            <div class="auth-card" id="form-container">
+                <h2 class="mb-2">Welcome back</h2>
+                <div class="auth-help">Enter your college email to receive a sign-in code.</div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input id="email" type="email" class="form-control" placeholder="your@college.edu" />
                 </div>
+                <button id="requestBtn" type="button" class="btn btn-primary btn-block mt-2">Request OTP</button>
+                <div class="divider my-3"><span>or</span></div>
+                <div id="otpSection" style="display:none;">
+                    <div class="form-group">
+                        <label for="otp">Enter OTP</label>
+                        <input id="otp" type="text" class="form-control" placeholder="6-digit code" />
+                    </div>
+                    <button id="verifyBtn" type="button" class="btn btn-success btn-block">Verify & Continue</button>
+                </div>
+                <div class="mt-3 text-muted" style="font-size:12px;">
+                    By continuing you agree to our <a href="#">Terms</a> and <a href="#">Privacy Policy</a>.
+                </div>
+            </div>
+
+            <div class="auth-illustration mt-3">
+                <img src="../images/register.jpg" alt="Sign in Illustration">
             </div>
         </section>
     </main>
+
     <footer id="sticky-footer" class=" py-2 bg-dark">
         <div class="brand">
             <a class="navbar-brand" href="#">PinPoint</a>
