added mail identifier in login

--- a/forms/register.html
+++ b/forms/register.html
@@ -66,7 +66,8 @@
                 <div class="auth-help">Enter your college email to receive a sign-in code.</div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input id="email" type="email" class="form-control" placeholder="your@college.edu" />
+                    <input id="email" type="email" class="form-control" placeholder="your@chitkara.edu.in" />
+                    <div id="emailDomainNote" class="form-note error" style="display:none;">Only Chitkara University email is allowed.</div>
                 </div>
                 <button id="requestBtn" type="button" class="btn btn-primary btn-block mt-2">Request OTP</button>
                 <div class="divider my-3"><span>or</span></div>
