--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
           <li class="nav-item grow">
             <a class="nav-link" href="forms/contactus.html">Contact Us</a>
           </li>
+          <li class="nav-item grow" id="navSelectCampus">
+            <a class="nav-link" href="forms/campus-select.html">Select Campus</a>
+          </li>
         </ul>
         <a href="./forms/register.html" class="ml-lg-3"><i class="fas fa-user signin grow"> Login</i></a>
       </div>
@@ -396,5 +399,6 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="assets/js/campus-ui.js"></script>
   </body>
 </html>
