--- a/forms/register.html
+++ b/forms/register.html
@@ -47,6 +47,9 @@
                 <li class="nav-item">
                     <a class="nav-link grow" href="contactus.html">Contact Us</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link grow" href="campus-select.html">Select Campus</a>
+                </li>
             </ul>
         </div>
     </nav>
