--- a/about_us.html
+++ b/about_us.html
@@ -6,43 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us</title>
+    <!-- Font Awesome & Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <!-- Additional fonts (optional) -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet" />
-
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet" />
-
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Courgette&display=swap" rel="stylesheet" />
-
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Courgette&family=Merienda:wght@400;700&display=swap" rel="stylesheet" />
-
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Courgette&family=Merienda:wght@400;700&family=Yeon+Sung&display=swap" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet" />
 </head>
 
 <body>
-    <nav>
-        <div class="navigation">
-            <ul class="home_contact">
-                <li><a href="home.html">Home</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
+        <a class="navbar-brand grow" href="index.html">PinPoint</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <ul class="login_reg">
-                <li id="login">
-                    <a href="">Login</a>
-                </li>
-                <li style="color: white">&#x2f;</li>
-                <li id="register">
-                    <a href="./forms/register.html"><i class="fas fa-user signin grow"> SignIn</i></a>
-                </li>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link grow" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link grow" href="about_us.html">About Us</a></li>
+                <li class="nav-item"><a class="nav-link grow" href="forms/contactus.html">Contact Us</a></li>
+                <li class="nav-item"><a class="nav-link grow" href="forms/register.html"><i class="fas fa-user mr-1"></i> Login</a></li>
             </ul>
         </div>
     </nav>
@@ -194,12 +183,27 @@
       </section>
     </div>
 
-    <footer>
-      <a href="#">FAQ</a>
-      <a href="#">Contact Us</a>
-      <a href="#">Terms Of Use</a>
-      <a href="#">Privacy Policy</a>
-      <a href="#">&copy;Copyright</a>
+    <footer id="page-footer" class="py-2 bg-dark">
+      <div class="brand">
+        <a class="navbar-brand" href="#">PinPoint</a>
+      </div>
+      <div class="copyright">
+        <small>
+          <span>Copyright &copy;</span> <span>All Rights Reserved</span>
+          <span>Terms of Use</span> and <span>Privacy Policy</span>
+        </small>
+      </div>
+      <div class="favicon">
+        <i class="social-media fab fa-facebook-f fa-2x"></i>
+        <i class="social-media fab fa-twitter fa-2x"></i>
+        <i class="social-media fab fa-instagram fa-2x"></i>
+        <i class="social-media fas fa-envelope fa-2x"></i>
+      </div>
     </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
