--- a/forms/register.html
+++ b/forms/register.html
@@ -34,13 +34,11 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto">
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link grow" href="../index.html">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link grow" href="register.html">Register</a>
-                </li>
+                
                 <li class="nav-item">
                     <a class="nav-link grow" href="../about_us.html">About Us</a>
                 </li>
@@ -48,7 +46,7 @@
                     <a class="nav-link grow" href="contactus.html">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link grow" href="campus-select.html">Select Campus</a>
+                    <a class="nav-link grow" href="register.html"><i class="fas fa-user mr-1"></i> Login</a>
                 </li>
             </ul>
         </div>
