--- a/index.html
+++ b/index.html
@@ -57,25 +57,20 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mx-auto">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item grow">
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item grow">
-            <a class="nav-link" href="forms/register.html">Register</a>
-          </li>
-          <li class="nav-item grow">
             <a class="nav-link" href="about_us.html">About Us</a>
           </li>
-
           <li class="nav-item grow">
             <a class="nav-link" href="forms/contactus.html">Contact Us</a>
           </li>
-          <li class="nav-item grow" id="navSelectCampus">
-            <a class="nav-link" href="forms/campus-select.html">Select Campus</a>
+          <li class="nav-item grow">
+            <a class="nav-link" href="forms/register.html"><i class="fas fa-user mr-1"></i> Login</a>
           </li>
         </ul>
-        <a href="./forms/register.html" class="ml-lg-3"><i class="fas fa-user signin grow"> Login</i></a>
       </div>
     </nav>
     <!-- <h1>Hello, world!</h1> -->
@@ -399,6 +394,5 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="assets/js/campus-ui.js"></script>
   </body>
 </html>
