--- a/profile.html
+++ b/profile.html
@@ -4,12 +4,24 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Profile • PinPoint</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
     <a class="navbar-brand grow" href="index.html">PinPoint</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a class="nav-link grow" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link grow" href="about_us.html">About Us</a></li>
+        <li class="nav-item"><a class="nav-link grow" href="forms/contactus.html">Contact Us</a></li>
+        <li class="nav-item"><a class="nav-link grow" href="forms/register.html"><i class="fas fa-user mr-1"></i> Login</a></li>
+      </ul>
+    </div>
   </nav>
   <main class="container py-5">
     <h1 class="mb-4">Complete Your Profile</h1>
@@ -19,5 +31,8 @@
     <div class="brand"><a class="navbar-brand" href="#">PinPoint</a></div>
   </footer>
   <script src="assets/js/auth.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
